# pacepeek

./: .gitignore  .todo  Dockerfile  LICENSE  LICENSING.md  NOTICE  README.md  app.py  babel.cfg  celerybeat-schedule  docker-compose.yml  logging.conf  make_celery.py  messages.pot  pyproject.toml  req_macos.txt  req_ubuntu.txt  requirements.txt  test
src/: __init__.py  github_auth.py  github_utils.py  llms.py  models.py  post_contents.txt  tasks.py  template_filters.py  utils.py  views.py  x_auth.py  x_utils.py
src/static/css/: styles.css
src/static/js/: widget.js
src/templates/: 403.html  404.html  _admin.html  _admin_home.html  _api_providers.html  _basic_settings.html  _browse_users.html  _error_log_view.html  _faq.html  _feed.html  _feedback_report_form.html  _feedback_report_results.html  _flash_messages.html  _home_body.html  _landing_page.html  _leaderboard.html  _load_admin_home.html  _load_notifications.html  _load_notifications_admin.html  _load_notifications_report.html  _load_payloads.html  _load_profile.html  _load_users_admin.html  _main_container_content.html  _markdown_widget_preview.html  _notifications.html  _notifications_report.html  _post.html  _posts.html  _premium.html  _premium_settings.html  _pricing.html  _profile_content.html  _repo_info.html  _repos.html  _search.html  _search_results.html  _settings.html  _sticky_main_tabs.html  _tos_and_privacy.html  (+9 more)
translations/fi/LC_MESSAGES/: messages.mo  messages.po
