[tool.poetry]
name = "pacepeek"
version = "0.1.0"
description = "Automated social media platform for developers"
authors = ["Rasmus <rasmus@ahtava.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.14.0"
appnope = "^0.1.4"
argon2-cffi = "^23.1.0"
argon2-cffi-bindings = "^21.2.0"
asttokens = "^3.0.0"
async-timeout = "^5.0.1"
attrs = "^24.3.0"
backcall = "^0.2.0"
black = "^24.10.0"
bleach = "^6.2.0"
blinker = "^1.9.0"
certifi = "^2024.12.14"
cffi = "^1.17.1"
charset-normalizer = "^3.4.1"
click = "^8.1.8"
cloudpickle = "^3.1.0"
colour = "^0.1.5"
cython = "^3.0.11"
debugpy = "^1.8.11"
decorator = "^5.1.1"
defusedxml = "^0.7.1"
entrypoints = "^0.4"
executing = "^2.1.0"
flask = "^3.1.0"
flask-crontab = "^0.1.2"
flask-dance = "^7.1.0"
flask-login = "^0.6.3"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
glcontext = "^3.0.0"
greenlet = "^3.1.1"
gym-notices = "^0.0.8"
idna = "^3.10"
ipykernel = "^6.29.5"
ipython = "^8.31.0"
ipython-genutils = "^0.2.0"
ipywidgets = "^8.1.5"
itsdangerous = "^2.2.0"
jedi = "^0.19.2"
jinja2 = "^3.1.5"
jsonschema = "^4.23.0"
jupyter = "^1.1.1"
jupyter-client = "^8.6.3"
jupyter-console = "^6.6.3"
jupyter-core = "^5.7.2"
jupyterlab-pygments = "^0.3.0"
jupyterlab-widgets = "^3.0.13"
mako = "^1.3.8"
markdown-it-py = "^3.0.0"
markupsafe = "^3.0.2"
matplotlib-inline = "^0.1.7"
mdurl = "^0.1.2"
mistune = "^3.1.0"
moderngl = "^5.12.0"
msgpack = "^1.1.0"
multipledispatch = "^1.0.0"
mypy-extensions = "^1.0.0"
nbclient = "^0.10.2"
nbconvert = "^7.16.5"
nbformat = "^5.10.4"
neovim = "^0.3.1"
nest-asyncio = "^1.6.0"
notebook = "^7.3.2"
numpy = "^2.2.1"
oauthlib = "^3.2.2"
packaging = "^24.2"
pandocfilters = "^1.5.1"
parso = "^0.8.4"
pathspec = "^0.12.1"
pexpect = "^4.9.0"
pickleshare = "^0.7.5"
pillow = "^11.1.0"
platformdirs = "^4.3.6"
prometheus-client = "^0.21.1"
prompt-toolkit = "^3.0.48"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.3"
pycparser = "^2.22"
pydub = "^0.25.1"
pyglet = "^2.0.20"
pygments = "^2.18.0"
pyjwt = "^2.10.1"
pynvim = "^0.5.2"
pyobjc-core = "^10.3.2"
pyobjc-framework-cocoa = "^10.3.2"
pyparsing = "^3.2.1"
pyqt6 = "^6.8.0"
pyqt6-qt6 = "^6.8.1"
pyqt6-sip = "^13.9.1"
pyqtgraph = "^0.13.7"
pyrr = "^0.10.3"
pyrsistent = "^0.20.0"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
pyzmq = "^26.2.0"
qtconsole = "^5.6.1"
qtpy = "^2.4.2"
redis = "^5.2.1"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
ruff = "^0.8.5"
send2trash = "^1.8.3"
tqdm = "^4.67.1"
traitlets = "^5.14.3"
twilio = "^9.4.1"
typing-extensions = "^4.12.2"
urllib3 = "^2.3.0"
urlobject = "^2.4.3"
watchdog = "^6.0.0"
wcwidth = "^0.2.13"
webencodings = "^0.5.1"
werkzeug = "^3.1.3"
widgetsnbextension = "^4.0.13"
sentry-sdk = "^2.19.2"
celery = "^5.4.0"
cryptography = "^44.0.0"
humanize = "^4.11.0"
pydantic = "^2.10.4"
groq = "^0.13.1"
openai = "^1.58.1"
anthropic = "^0.42.0"
instructor = "^1.7.2"
tiktoken = "^0.8.0"
jwt = "^1.3.1"
babel = "^2.16.0"
flask-cors = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
