[tool.poetry]
description = ""
authors = ["Rasmus <rasmus@ahtava.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.14.0"
flask = "^3.1.0"
flask-crontab = "^0.1.2"
flask-cors = "^3.0.10"
flask-dance = "^7.1.0"
flask-login = "^0.6.3"
flask-migrate = "^4.0.7"
flask-sqlalchemy = "^3.1.1"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.1"
pytz = "^2024.2"
pyzmq = "^26.2.0"
requests = "^2.32.3"
requests-oauthlib = "^2.0.0"
twilio = "^9.4.1"
werkzeug = "^3.1.3"
sentry-sdk = "^2.19.2"
celery = "^5.4.0"
cryptography = "^44.0.0"
humanize = "^4.11.0"
pydantic = "^2.10.4"
groq = "^0.13.1"
openai = "^1.58.1"
anthropic = "^0.42.0"
instructor = "^1.7.2"
tiktoken = "^0.8.0"
jwt = "^1.3.1"
babel = "^2.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
